<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Tab2">

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/two"-->
    <!--android:textSize="40dp"-->
    <!--android:textStyle="bold"-->
    <!--android:layout_centerInParent="true"/>-->

    <LinearLayout
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="top"
        style="@style/WhiteBackground3"
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Spinner
            android:layout_gravity="center"
            android:gravity="bottom"
            android:id="@+id/spinner_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_48"
            android:paddingLeft="10dp"
            android:hint="@string/date" />
    </LinearLayout>

    <LinearLayout
        android:paddingStart="18dp"
        style="@style/WhiteBackground3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_transaction" />

        <TextView
            android:layout_marginLeft="@dimen/siza_10"
            android:id="@+id/DateTimeT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="16-10-2016" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:gravity="center_vertical"
            android:id="@+id/SetDateT2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_48"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:text="Chọn Ngày" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:orientation="vertical"
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/lv_tab2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ListView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_chi"
            android:text="@string/total_chi"
            android:textColor="@color/white"
            android:background="@drawable/btn_chi"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40" />

        <Button
            android:id="@+id/btn_thu"
            android:text="@string/total_thu"
            android:textColor="@color/white"
            android:background="@drawable/btn_thu"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_40" />
    </LinearLayout>
</LinearLayout>