<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/WhiteBackgroundCard"
    card_view:cardBackgroundColor="@color/color_card"
    card_view:cardCornerRadius="1dp"
    card_view:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_marginLeft="@dimen/size_9"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        style="@style/WhiteBackground">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:weightSum="1">
            <ImageView
                android:layout_gravity="left"
                android:id="@+id/img_tk"
                android:src="@mipmap/ic_t05"
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="15sp"
                android:text="@string/name_acc"
                android:textColor="@color/rectage_btn"/>
        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/des_acc"
                android:textColor="@color/Gray"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="@dimen/siza_6"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:id="@+id/tv_money"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="26dp"
                android:text="@string/amount"
                android:textColor="@color/color_red" />
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>