<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_listview_item">

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ln1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="left"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="left"
                android:scaleType="centerInside"
                android:src="@mipmap/type_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="13dp"
                android:gravity="left"
                android:text="@string/group"
                android:id="@+id/txtTennhom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:gravity="right"
            android:layout_weight="2.5"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="13dp"
                android:gravity="right"
                android:text="@string/amount"
                android:id="@+id/txtMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_gravity="right"
                android:scaleType="centerInside"
                android:src="@mipmap/money_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/line_1"
        android:layout_below="@id/ln1"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/rectage_btn" />
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/line_1"
        android:id="@+id/ln2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="left"
            android:layout_weight="2.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_gravity="left"
                android:scaleType="centerInside"
                android:src="@mipmap/des_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="13dp"
                android:gravity="left"
                android:text="@string/descriptions"
                android:id="@+id/txtLydo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="13dp"
                android:gravity="right"
                android:text="@string/group"
                android:id="@+id/txtTenTK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <ImageView
                android:layout_gravity="right"
                android:scaleType="centerInside"
                android:src="@mipmap/acc_ic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/line_2"
        android:layout_below="@id/ln2"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/rectage_btn" />

    <TextView
        android:layout_below="@id/line_2"
        android:id="@+id/txtTenKhoan"
        android:text="@string/type_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/rectage_btn" />
</RelativeLayout>